--- a/app/src/main/res/layout/card_topic.xml
+++ b/app/src/main/res/layout/card_topic.xml
@@ -1,21 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
 
-    <android.support.v7.widget.CardView
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/card_view"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_gravity="center"
-        android:layout_margin="10dp"
-        card_view:cardCornerRadius="10dp">
+
+<android.support.v7.widget.CardView xmlns:tools="http://schemas.android.com/tools"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/card_view"
+    android:layout_width="match_parent"
+    android:layout_height="100dp"
+    android:layout_margin="10dp"
+    card_view:cardCornerRadius="10dp"
+    android:elevation="90dp">
 
         <Button
-            android:id="@+id/info_text"
+            android:id="@+id/topic_title_name"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/card_gradient"
@@ -25,5 +22,3 @@
             android:textStyle="bold"
             tools:text="Holi" />
     </android.support.v7.widget.CardView>
-
-</LinearLayout>
