See description for change list
* Added fragment change animations
* Implemented firestore database
* Refactored file positions
* Added activities for navigation items
* Added fragments for navigation items

--- a/app/src/main/res/layout/fragment_quick_action.xml
+++ b/app/src/main/res/layout/fragment_quick_action.xml
@@ -3,12 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Home.HomeFragment">
+    tools:context=".QuickActions.QuickActionFragment">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/topic_title_recycler_view"
+    <!-- TODO: Update blank fragment layout -->
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:text="@string/hello_blank_fragment" />
 
-    </android.support.v7.widget.RecyclerView>
 </FrameLayout>
