--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
         android:orientation="horizontal"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="8dp">
 
         <ImageView
@@ -40,7 +41,7 @@
             android:hint="@string/welcome"
             android:padding="10dip"
             android:textSize="19sp"
-            android:textColor="#0d5bdd">
+            android:textColor="@android:color/black">
             <requestFocus />
         </EditText>
 
@@ -57,6 +58,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/fragment_container"
         app:layout_constraintTop_toBottomOf="@id/bar"
+        android:layout_marginBottom="55dp"
         android:layout_marginTop="8dp">
 
     </FrameLayout>
