--- a/app/src/main/res/layout/card_word.xml
+++ b/app/src/main/res/layout/card_word.xml
@@ -2,10 +2,10 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="170dp"
-    android:layout_height="170dp"
+    android:layout_width="match_parent"
+    android:layout_height="150dp"
     android:layout_margin="10dp"
-    android:elevation="90dp"
+    card_view:cardElevation="4dp"
     card_view:cardCornerRadius="8dp">
 
     <LinearLayout
@@ -14,23 +14,24 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/card_image"
+            android:id="@+id/word_card_image"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="4"
-            android:background="@drawable/card_gradient"
-            android:padding="15dp"
-            android:src="@mipmap/ic_launcher" />
+            android:background="@drawable/default_card_placeholder"
+            android:padding="10dp"
+            android:contentDescription="Word Image" />
 
         <TextView
-            android:id="@+id/card_small_text"
+            android:id="@+id/word_card_text"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center"
             tools:text="text"
+            android:ellipsize="middle"
             android:textColor="#000"
-            android:textSize="22sp" />
+            android:textSize="20sp" />
 
     </LinearLayout>
 </android.support.v7.widget.CardView>
