--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -3,208 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Setting.SettingFragment"
-    >
+    tools:context=".Setting.SettingFragment">
 
     <!-- TODO: Update blank fragment layout -->
-
-<LinearLayout
-
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@drawable/default_card_placeholder">
-    <de.hdodenhof.circleimageview.CircleImageView
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/profile_image"
-        android:layout_width="match_parent"
-        android:layout_height="116dp"
-        android:paddingTop="30dp"
-        android:paddingBottom="10dp"
-        android:src="@drawable/profile_photo"
-        app:civ_border_width="2dp"
-        app:civ_border_color="#FF000000"
-        android:layout_gravity="center_horizontal"
-        />
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:text="NAME"
-        android:textColor="#000000"
-        android:textStyle="bold"
-        android:textSize="30dp"
-        android:textAlignment="center"/>
+        android:layout_height="match_parent"
+        android:text="@string/hello_blank_fragment" />
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:orientation="horizontal"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        >
-
-        <ImageView
-            android:layout_width="48dp"
-            android:layout_height="match_parent"
-            android:layout_marginRight="15dp"
-            android:src="@drawable/ic_system_update_black_24dp" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Update"
-            android:textSize="22dp"
-            android:textColor="#000000"
-            android:layout_gravity="center_vertical"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:orientation="horizontal"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        >
-
-        <ImageView
-            android:layout_width="48dp"
-            android:layout_height="match_parent"
-            android:src="@drawable/ic_event_available_black_24dp"
-            android:layout_marginRight="15dp"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Daily Notifications"
-            android:textSize="22dp"
-            android:textColor="#000000"
-            android:layout_gravity="center_vertical"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:orientation="horizontal"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        >
-
-        <ImageView
-            android:layout_width="38dp"
-            android:layout_height="match_parent"
-            android:src="@drawable/translate"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="20dp"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Language"
-            android:textSize="22dp"
-            android:textColor="#000000"
-            android:layout_gravity="center_vertical"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:orientation="horizontal"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        >
-
-        <ImageView
-            android:layout_width="48dp"
-            android:layout_height="match_parent"
-            android:src="@drawable/ic_power_settings_new_black_24dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="5dp"
-            android:layout_marginRight="15dp"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Logout"
-            android:textSize="22dp"
-            android:textColor="#000000"
-            android:layout_gravity="center_vertical"/>
-    </LinearLayout>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Miscellaneous"
-        android:paddingLeft="15dp"
-        android:layout_marginTop="10dp"
-        android:textStyle="italic"
-        android:background="#FC9844"
-        android:textColor="#FFFFFF" />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:orientation="horizontal"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        >
-
-        <ImageView
-            android:layout_width="48dp"
-            android:layout_height="match_parent"
-            android:src="@drawable/ic_adb_black_24dp"
-            android:layout_marginRight="15dp"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="About Shabd"
-            android:textSize="22dp"
-            android:textColor="#000000"
-            android:layout_gravity="center_vertical"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:orientation="horizontal"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        >
-
-        <ImageView
-            android:layout_width="48dp"
-            android:layout_height="match_parent"
-            android:src="@drawable/ic_stars_black_24dp"
-            android:layout_marginRight="15dp"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Rate us"
-            android:textSize="22dp"
-            android:textColor="#000000"
-            android:layout_gravity="center_vertical"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:orientation="horizontal"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        >
-
-        <ImageView
-            android:layout_width="48dp"
-            android:layout_height="match_parent"
-            android:src="@drawable/ic_share_black_24dp"
-            android:layout_marginRight="15dp"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Share"
-            android:textSize="22dp"
-            android:textColor="#000000"
-            android:layout_gravity="center_vertical"/>
-    </LinearLayout>
-
-
-
-</LinearLayout>
 </FrameLayout>
