--- a/app/src/main/res/layout/activity_dictionary.xml
+++ b/app/src/main/res/layout/activity_dictionary.xml
@@ -43,7 +43,7 @@
         </EditText>
 
         <ImageView
-            android:id="@+id/del"
+            android:id="@+id/deld"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toStartOf="@+id/save"
@@ -65,6 +65,7 @@
         android:visibility="gone"
         app:layout_constraintStart_toEndOf="@id/bardict"
         app:layout_constraintTop_toBottomOf="@id/bardict"/>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/topic_dict_recycler_view"
         android:layout_width="match_parent"
@@ -74,4 +75,15 @@
         app:layout_constraintStart_toEndOf="@id/mean"
         app:layout_constraintTop_toBottomOf="@id/mean">
     </android.support.v7.widget.RecyclerView>
+
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/playd"
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_play_arrow_black_24dp"
+        app:elevation="4dp"
+        app:backgroundTint="@color/colorPrimary"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 </android.support.constraint.ConstraintLayout>
