--- a/app/src/main/res/layout/activity_dictionary.xml
+++ b/app/src/main/res/layout/activity_dictionary.xml
@@ -31,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toEndOf="@id/search"
-            android:layout_toStartOf="@id/del"
+            android:layout_toStartOf="@id/deld"
             android:background="@null"
             android:inputType="text"
             android:cursorVisible="false"
