--- a/app/src/main/res/layout/card_word.xml
+++ b/app/src/main/res/layout/card_word.xml
@@ -4,34 +4,34 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="150dp"
-    android:layout_margin="10dp"
+    android:layout_margin="4dp"
     card_view:cardElevation="4dp"
     card_view:cardCornerRadius="8dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:padding="2dp"
+        android:background="@drawable/default_card_placeholder"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/word_card_image"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="4"
-            android:background="@drawable/default_card_placeholder"
-            android:padding="10dp"
+            android:layout_height="100dp"
+            android:padding="8dp"
             android:contentDescription="Word Image" />
 
         <TextView
             android:id="@+id/word_card_text"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:gravity="center"
+            android:layout_gravity="center"
             tools:text="text"
             android:ellipsize="middle"
-            android:textColor="#000"
-            android:textSize="20sp" />
+            android:textColor="#fff"
+            android:textSize="18sp" />
 
     </LinearLayout>
 </android.support.v7.widget.CardView>
