--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,18 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".Home.HomeFragment">
 
-    <LinearLayout
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/topic_title_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginRight="4dp"/>
 
-
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/topic_title_recycler_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp">
-        </android.support.v7.widget.RecyclerView>
-    </LinearLayout>
 </FrameLayout>
