--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -1,18 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Setting.SettingFragment"
+    android:orientation="vertical"
     >
 
     <!-- TODO: Update blank fragment layout -->
 
-<LinearLayout
-
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -24,6 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="116dp"
         android:paddingTop="30dp"
+
         android:paddingBottom="10dp"
         android:src="@drawable/profile_photo"
         app:civ_border_width="2dp"
@@ -84,10 +81,9 @@
             android:textColor="#000000"
             android:layout_gravity="center_vertical"/>
     </LinearLayout>
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:orientation="horizontal"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
         >
@@ -97,15 +93,26 @@
             android:layout_height="match_parent"
             android:src="@drawable/translate"
             android:layout_marginLeft="5dp"
-            android:layout_marginRight="20dp"/>
+            android:layout_marginRight="20dp"
+            android:id="@+id/language_image"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Language"
             android:textSize="22dp"
             android:textColor="#000000"
-            android:layout_gravity="center_vertical"/>
-    </LinearLayout>
+            android:layout_toRightOf="@id/language_image"
+            android:layout_centerVertical="true"
+            android:id="@+id/language_text"/>
+        <android.support.v7.widget.SwitchCompat
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:layout_centerVertical="true"
+            android:checked="true"
+            android:theme="@style/Theme.MyTheme" />
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -207,4 +214,3 @@
 
 
 </LinearLayout>
-</FrameLayout>
