--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -110,7 +110,7 @@
             android:layout_alignParentRight="true"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:layout_centerVertical="true"
-            android:checked="true"
+            android:checked="false"
             android:theme="@style/Theme.MyTheme" />
     </RelativeLayout>
 
