--- a/app/src/main/res/layout/activity_dictionary.xml
+++ b/app/src/main/res/layout/activity_dictionary.xml
@@ -2,23 +2,24 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/dictionary_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/dictionary_main"
     tools:context=".Dictionary.DictionaryActivity">
+
     <RelativeLayout
+        android:id="@+id/bardict"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/bardict"
-        android:visibility="visible"
         android:layout_marginLeft="54dp"
+        android:layout_marginTop="18dp"
         android:layout_marginRight="16dp"
-        android:padding="2dp"
         android:background="@drawable/speakbar"
         android:orientation="horizontal"
-        app:layout_constraintTop_toTopOf="parent"
+        android:padding="2dp"
+        android:visibility="visible"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="18dp">
+        app:layout_constraintTop_toTopOf="parent">
 
         <EditText
             android:id="@+id/speak"
@@ -26,12 +27,13 @@
             android:layout_height="wrap_content"
             android:layout_toStartOf="@id/deld"
             android:background="@null"
-            android:inputType="text"
             android:cursorVisible="false"
             android:hint="@string/welcome"
+            android:inputType="text"
             android:padding="10dip"
-            android:textSize="19sp"
-            android:textColor="#0d5bdd">
+            android:textColor="#0d5bdd"
+            android:textSize="19sp">
+
             <requestFocus />
         </EditText>
 
@@ -42,6 +44,7 @@
             android:layout_toStartOf="@+id/save"
             android:padding="10dip"
             app:srcCompat="@drawable/ic_cancel_black_24dp" />
+
         <ImageView
             android:id="@+id/save"
             android:layout_width="wrap_content"
@@ -51,23 +54,14 @@
             android:visibility="visible"
             app:srcCompat="@drawable/ic_library_add_black_24dp" />
     </RelativeLayout>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/mean"
-        android:visibility="gone"
-        app:layout_constraintStart_toEndOf="@id/bardict"
-        app:layout_constraintTop_toBottomOf="@id/bardict"/>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/topic_dict_recycler_view"
+    <FrameLayout
+        android:id="@+id/frame_dictionary"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:padding="8dp"
-        app:layout_constraintStart_toEndOf="@id/mean"
-        app:layout_constraintTop_toBottomOf="@id/mean">
-    </android.support.v7.widget.RecyclerView>
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/bardict"
+        app:layout_constraintVertical_weight="1"
+        app:layout_constraintBottom_toBottomOf="parent"/>
     <android.support.design.widget.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -75,7 +69,7 @@
         android:layout_margin="16dp"
         android:src="@drawable/ic_search_black_24dp"
         app:elevation="4dp"
-        app:backgroundTint="@color/cardBackground"
+        app:backgroundTint="@color/colorPrimary"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toTopOf="@id/playd"/>
     <android.support.design.widget.FloatingActionButton
@@ -88,4 +82,5 @@
         app:backgroundTint="@color/colorPrimary"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
+
 </android.support.constraint.ConstraintLayout>
