--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -3,10 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Setting.SettingFragment"
-    >
-
-    <!-- TODO: Update blank fragment layout -->
+    tools:context=".Setting.SettingFragment">
 
 <LinearLayout
 
