--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -153,6 +153,7 @@
             android:src="@drawable/ic_adb_black_24dp"
             android:layout_marginRight="15dp"/>
         <TextView
+            android:id="@+id/about_shabd_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="About Shabd"
