--- a/app/src/main/res/layout/card_word.xml
+++ b/app/src/main/res/layout/card_word.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="150dp"
-    android:id="@+id/card_word_ll"
     android:layout_margin="4dp"
+    android:id="@+id/card_word_cv"
     card_view:cardElevation="4dp"
     card_view:cardCornerRadius="8dp">
 
@@ -13,14 +13,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="2dp"
-        android:background="@drawable/default_card_placeholder"
+        android:id="@+id/card_word_ll"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/word_card_image"
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:padding="8dp"
+            android:padding="4dp"
             android:contentDescription="Word Image" />
 
         <TextView
@@ -35,4 +35,4 @@
             android:textSize="18sp" />
 
     </LinearLayout>
-</android.support.v7.widget.CardView>
+</android.support.design.card.MaterialCardView>
