--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#CCFF9800</color>
-    <color name="colorPrimaryDark">#FF9800</color>
+    <color name="colorPrimary">#61045f</color>
+    <color name="colorPrimaryDark">#61045f</color>
     <color name="colorAccent">#009688</color>
     <color name="cardBackground">#1330CE</color>
+    <color name="transparent">@android:color/transparent</color>
 </resources>
