--- a/app/src/main/res/layout/card_word.xml
+++ b/app/src/main/res/layout/card_word.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="150dp"
+    android:layout_height="wrap_content"
+    android:minHeight="150dp"
     android:layout_margin="4dp"
     android:id="@+id/card_word_cv"
     card_view:cardElevation="4dp"
@@ -12,6 +13,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:minHeight="150dp"
         android:padding="2dp"
         android:id="@+id/card_word_ll"
         android:orientation="vertical">
@@ -25,14 +27,15 @@
 
         <TextView
             android:id="@+id/word_card_text"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:gravity="center"
             android:layout_gravity="center"
             tools:text="text"
             android:ellipsize="middle"
             android:textColor="#fff"
-            android:textSize="18sp" />
+            android:textSize="@dimen/material_text_body1" />
 
     </LinearLayout>
-</android.support.design.card.MaterialCardView>
+</android.support.v7.widget.CardView>
