--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -5,11 +5,13 @@
     android:layout_height="match_parent"
     tools:context=".Category.CategoryFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:id="@+id/category_tv"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/category_frag_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="hello" />
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginTop="8dp">
+    </android.support.v7.widget.RecyclerView>
 
 </FrameLayout>
