--- a/app/src/main/res/layout/fragment_quick_action.xml
+++ b/app/src/main/res/layout/fragment_quick_action.xml
@@ -5,10 +5,12 @@
     android:layout_height="match_parent"
     tools:context=".QuickActions.QuickActionFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/quick_action_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginRight="4dp"/>
 
 </FrameLayout>
