--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="10dip"
+            android:background="?android:attr/selectableItemBackground"
             app:srcCompat="@drawable/ic_play_arrow_black_24dp" />
 
         <EditText
@@ -55,6 +56,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:padding="10dip"
+            android:background="?android:attr/selectableItemBackground"
             app:srcCompat="@drawable/ic_cancel_black_24dp" />
     </RelativeLayout>
 
