updated settings fragment and added circular ripple to speaker bar icons

--- a/app/src/main/res/layout/about_shabd.xml
+++ b/app/src/main/res/layout/about_shabd.xml
@@ -1,64 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    xmlns:tools="http://schemas.android.com/tools"
     tools:context=".Setting.aboutActivity">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:background="@drawable/default_card_placeholder"
+        android:background="@drawable/gradient_3"
         android:gravity="center">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/shabd"
             android:textAlignment="center"
+            android:textColor="@color/browser_actions_bg_grey"
             android:textSize="50sp"
-            android:textStyle="bold"
-            android:textColor="#FFFFFF"/>
+            android:textStyle="bold" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
         android:layout_marginTop="25dp"
+        android:layout_marginRight="10dp"
         android:background="@drawable/rounded_edittext">
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/overview"
             android:gravity="center"
-            android:textSize="22sp"
-            android:textColor="#000000"/>
+            android:text="@string/overview"
+            android:textColor="@color/browser_actions_bg_grey"
+            android:textSize="22sp" />
 
     </LinearLayout>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:text="@string/Overview_content"
         android:textColor="@color/browser_actions_text_color"
-        android:textSize="14sp"/>
+        android:textSize="14sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
         android:layout_marginTop="25dp"
+        android:layout_marginRight="10dp"
         android:background="@drawable/rounded_edittext">
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/developer"
             android:gravity="center"
-            android:textSize="22sp"
-            android:textColor="#000000"/>
+            android:text="@string/developer"
+            android:textColor="@color/browser_actions_bg_grey"
+            android:textSize="22sp" />
 
     </LinearLayout>
 </LinearLayout>
