--- a/app/src/main/res/drawable/rounded_edittext.xml
+++ b/app/src/main/res/drawable/rounded_edittext.xml
@@ -4,9 +4,8 @@
     >
     <gradient
         android:angle="135"
-        android:centerColor="#CBFF0000"
-        android:endColor="#FFC107"
-        android:startColor="#FFC107"
+        android:endColor="#aa076b"
+        android:startColor="#61045f"
         android:type="linear" />
     <corners
         android:bottomRightRadius="15dp"
