implemented logout function

--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -109,6 +109,7 @@
         android:layout_height="50dp"
         android:orientation="horizontal"
         android:layout_marginTop="10dp"
+        android:id="@+id/setting_logout_ll"
         android:layout_marginLeft="10dp"
         >
 
