--- a/app/src/main/res/layout/fragment_quick_action.xml
+++ b/app/src/main/res/layout/fragment_quick_action.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/backgroundgradient"
     tools:context=".QuickActions.QuickActionFragment">
 
     <!-- TODO: Update blank fragment layout -->
