Created toolbar and implemented it in dictionary activity

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,11 +2,11 @@
 <resources>
     <color name="colorPrimary">#61045f</color>
     <color name="colorPrimaryDark">#61045f</color>
-    <color name="colorAccent">#009688</color>
+    <color name="colorAccent">#216680</color>
     <color name="cardBackground">#1330CE</color>
   
     <color name="meaningBackground">#FFFFFF</color>
-    <color name="floatingButton">#CCFF9800</color>
+    <color name="floatingButton">#aa076b</color>
     <color name="searchBackground">#FF9800</color>
 
     <color name="transparent">@android:color/transparent</color>
