--- a/app/src/main/res/layout/activity_dictionary.xml
+++ b/app/src/main/res/layout/activity_dictionary.xml
@@ -7,80 +7,125 @@
     android:layout_height="match_parent"
     tools:context=".Dictionary.DictionaryActivity">
 
-    <RelativeLayout
-        android:id="@+id/bardict"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="54dp"
-        android:layout_marginTop="18dp"
-        android:layout_marginRight="16dp"
-        android:background="@drawable/speakbar"
-        android:orientation="horizontal"
-        android:padding="2dp"
-        android:visibility="visible"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/bar"
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:background="@drawable/curve_background"
+        android:weightSum="1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:popupTheme="@style/AppTheme">
 
-        <EditText
-            android:id="@+id/speak"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toStartOf="@id/deld"
-            android:background="@null"
-            android:cursorVisible="false"
-            android:hint="@string/welcome"
-            android:inputType="text"
-            android:padding="10dip"
-            android:textColor="#0d5bdd"
-            android:textSize="19sp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            <requestFocus />
-        </EditText>
+            <LinearLayout
+                android:id="@+id/language_switch"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="15dp"
+                android:orientation="horizontal"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
+                android:visibility="gone">
 
-        <ImageView
-            android:id="@+id/deld"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toStartOf="@+id/save"
-            android:padding="10dip"
-            app:srcCompat="@drawable/ic_cancel_black_24dp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="10dp"
+                    android:text="@string/english"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
-        <ImageView
-            android:id="@+id/save"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:padding="10dip"
-            android:visibility="visible"
-            app:srcCompat="@drawable/ic_library_add_black_24dp" />
-    </RelativeLayout>
+                <android.support.v7.widget.SwitchCompat
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:checked="true"
+                    android:clickable="true"
+                    android:textSelectHandle="@drawable/curve_background"
+                    android:textSize="22sp"
+                    android:theme="@style/AppTheme" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="6dp"
+                    android:text="@string/hindi"
+                    android:textSize="18sp" />
+            </LinearLayout>
+
+            <RelativeLayout
+                android:id="@+id/speakbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="20dp"
+                android:animateLayoutChanges="true"
+                android:background="@drawable/rounded_speakbar"
+                android:orientation="horizontal"
+                android:padding="2dp"
+                android:visibility="visible">
+
+                <ImageView
+                    android:id="@+id/playd"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="10dip"
+                    app:srcCompat="@drawable/ic_play_arrow_black_24dp" />
+
+                <EditText
+                    android:id="@+id/speak"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:layout_toStartOf="@id/deld"
+                    android:layout_toEndOf="@id/playd"
+                    android:background="@null"
+                    android:cursorVisible="false"
+                    android:hint="@string/welcome"
+                    android:importantForAutofill="no"
+                    android:inputType="text"
+                    android:padding="10dp"
+                    android:textColor="@android:color/black"
+                    android:textSize="18sp"
+                    android:textStyle="bold">
+
+                    <requestFocus />
+                </EditText>
+
+                <ImageView
+                    android:id="@+id/deld"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginTop="4dp"
+                    android:padding="10dip"
+                    app:srcCompat="@drawable/ic_cancel_black_24dp" />
+            </RelativeLayout>
+        </LinearLayout>
+    </android.support.v7.widget.Toolbar>
 
     <FrameLayout
         android:id="@+id/frame_dictionary"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/bardict"
-        app:layout_constraintVertical_weight="1"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/bar"
+        app:layout_constraintVertical_weight="1" />
+
     <android.support.design.widget.FloatingActionButton
+        android:id="@+id/search"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/search"
         android:layout_margin="16dp"
         android:src="@drawable/ic_search_black_24dp"
+        app:backgroundTint="@color/floatingButton"
         app:elevation="4dp"
-        app:backgroundTint="@color/colorPrimary"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/playd"/>
-    <android.support.design.widget.FloatingActionButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/playd"
-        android:layout_margin="16dp"
-        android:src="@drawable/ic_play_arrow_black_24dp"
-        app:elevation="4dp"
-        app:backgroundTint="@color/colorPrimary"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
