--- a/app/src/main/res/drawable/gradient_4.xml
+++ b/app/src/main/res/drawable/gradient_4.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
 
     <gradient
-        android:angle="135"
-        android:endColor="#36d1dc"
-        android:startColor="#5b86e5"
+        android:angle="90"
+        android:endColor="#833191"
+        android:startColor="#833191"
         android:type="linear" />
 
     <corners
